--- a/src/main/java/cn/huaming/k8s/minikube/nginx.yaml
+++ b/src/main/java/cn/huaming/k8s/minikube/nginx.yaml
@@ -1,18 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-dm
+  name: nginx-deployment
 spec:
-  replicas: 2
+  selector:
+    matchLabels:
+      app: nginx
+  replicas: 1 # tells deployment to run 2 pods matching the template
   template:
     metadata:
       labels:
-        name: nginx
+        app: nginx
     spec:
       containers:
         - name: nginx
-          image: nginx:alpine
-          imagePullPolicy: IfNotPresent
+          image: nginx:latest
           ports:
             - containerPort: 80
 
