feat：config and stateful

--- a/src/main/java/cn/huaming/k8s/inputdata/env.yaml
+++ b/src/main/java/cn/huaming/k8s/inputdata/env.yaml
@@ -41,10 +41,21 @@ spec:
               fieldPath: status.podIP
         #Container 字段作为环境变量的值
         - name: MY_CPU_REQUEST
-            valueFrom:
-              resourceFieldRef:
-                containerName: test-container
-                resource: requests.cpu
+          valueFrom:
+            resourceFieldRef:
+              containerName: test-container
+              resource: requests.cpu
+        # 相互依赖
+        - name: SERVICE_PORT
+          value: "80"
+        - name: SERVICE_IP
+          value: "172.17.0.1"
+        - name: UNCHANGED_REFERENCE
+          value: "$(PROTOCOL)://$(SERVICE_IP):$(SERVICE_PORT)"
+        - name: PROTOCOL
+          value: "https"
+        - name: SERVICE_ADDRESS
+          value: "$(PROTOCOL)://$(SERVICE_IP):$(SERVICE_PORT)"
         #文件
 
   restartPolicy: Never
