--- a/src/main/resources/application-log.properties
+++ b/src/main/resources/application-log.properties
@@ -13,16 +13,16 @@ logging.file.max-size=1
 #限制日志归档文件的总大小. 当日志归档的总大小超过该阈值时，将删除备份
 logging.file.total-size-cap=100
 
-#logging.level.root=warn
-logging.level.org.springframework.web=debug
+logging.level.root=warn
+logging.level.org.springframework.web=warn
 #logging.level.org.hibernate=error
 logging.level.cn.huaming=trace
 #组的方式
-logging.group.tomcat=org.apache.catalina, org.apache.coyote, org.apache.tomcat
+#logging.group.tomcat=org.apache.catalina, org.apache.coyote, org.apache.tomcat
 #logging.level.tomcat=TRACE
 
-logging.level.sql=TRACE
-logging.level.web=DEBUG
+#logging.level.sql=TRACE
+#logging.level.web=DEBUG
 
 logging.level.org.springframework.boot.autoconfigure.security=INFO
 
