--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.main.banner-mode=off
 spring.main.allow-bean-definition-overriding=true
 spring.main.lazy-initialization=false
 
-spring.profiles.include=log,mysql,random,redis,security,testboot,kafka
+spring.profiles.include=mysql,random,redis,security,testboot,kafka
 
